--- a/oops/package.json
+++ b/oops/package.json
@@ -2,10 +2,10 @@
   "name": "oops",
   "version": "1.0.0",
   "description": "",
-  "main": "objectCreate.js",
+  "main": "udemy.js",
   "scripts": {
-    "start": "node objectCreate",
-    "dev": "nodemon objectCreate"
+    "start": "node udemy",
+    "dev": "nodemon udemy"
   },
   "author": "",
   "license": "ISC",
